--- a/package.json
+++ b/package.json
@@ -5,16 +5,16 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/trueinteractions/website"
   },
-  "dependencies":{
-    "express":"4.12.3",
-    "request":"2.53.0",
-    "compression":"1.4.3"
+  "dependencies": {
+    "compression": "1.4.3",
+    "express": "4.12.3",
+    "request": "2.53.0"
   },
   "keywords": [
     "website"
@@ -24,5 +24,8 @@
   "bugs": {
     "url": "https://github.com/trueinteractions/website/issues"
   },
-  "homepage": "https://github.com/trueinteractions/website"
+  "homepage": "https://github.com/trueinteractions/website",
+  "devDependencies": {
+    "nodemon": "^1.3.7"
+  }
 }
